# git-submodules-demo

./: .gitignore  .gitmodules  config.py  main.py  pyproject.toml  settings.py
docs/: commands.md
