[tool.poetry]
name = "git-submodules-demo"
version = "0.1.0"
description = ""
authors = ["Luis C. Berrocal <luis.berrocal.1942@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".tox",
    ".vscode",
    "__pypackages__",
    "_build",
    "node_modules",
    "site-packages",
    "**/migrations/*.py",
]
[tool.ruff.lint]

# https://github.com/astral-sh/ruff/issues/8795
select = [
    "E", # pycodestyle
    "D", # pydocstyle
     "F", # Pyflakes
    "UP", # pyupgrade
    "BLE", # flake8-blind-except
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
    "N", # pep-8 naming
    "ARG", # flake8-unused-arguments
    "G", # flake8-logging-format
    "LOG", # flake8-logging
    "FIX", # flake8-fixme
    "T20", # flake8-print
    "ANN", # flake8-annotations
    "PYI", # flake8-pyi
    "RSE", # flake8-raise
    "PL", # Pylint
    "SLF", # flake8-self
    "ERA", # eradicate
    "RET", # flake8-return
]
[tool.ruff.lint.pydocstyle]
convention = "google"
[tool.ruff.lint.per-file-ignores]
# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
"__init__.py" = ["E402", "D"]
# Ignore `D` rules everywhere except for the `src/` directory.

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"